k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eucloud
  labels:
    name: eucloud
    environment: production
