k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: eucloud-backend
  namespace: eucloud
spec:
  type: NodePort
  selector:
    app: eucloud-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      nodePort: 30500
---
apiVersion: v1
kind: Service
metadata:
  name: eucloud-frontend
  namespace: eucloud
spec:
  type: NodePort
  selector:
    app: eucloud-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
